--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,21 +9,34 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/${defaultBuildTask}/bin/observer",
-            "args": ["-f", "${workspaceFolder}/etc/observer.ini", "-P", "cli"],
+            "args": [
+                "-f",
+                "${workspaceFolder}/etc/observer.ini",
+                "-P",
+                "cli"
+            ],
             "cwd": "${workspaceFolder}/${defaultBuildTask}/",
             "internalConsoleOptions": "openOnSessionStart",
             "osx": {
                 "MIMode": "lldb",
-                "externalConsole":true
+                "externalConsole": true
             }
         },
         {
             "type": "lldb",
             "request": "launch",
-            "name": "LLDB",
-            "program": "${workspaceFolder}/${defaultBuildTask}/bin/observer",
-            "args": ["-f", "${workspaceFolder}/etc/observer.ini", "-P", "cli"],
-            "cwd": "${workspaceFolder}/${defaultBuildTask}/"
+            "name": "server",
+            "program": "${workspaceFolder}/build_debug/bin/observer",
+            //"args": ["-f", "${workspaceFolder}/etc/observer.ini", "-P", "cli"],
+            //"cwd": "${workspaceFolder}/${defaultBuildTask}/"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "client",
+            "program": "${workspaceFolder}/build_debug/bin/obclient",
+            //"args": ["-f", "${workspaceFolder}/etc/observer.ini", "-P", "cli"],
+            //"cwd": "${workspaceFolder}/${defaultBuildTask}/"
         }
     ]
 }
