--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,6 +37,40 @@
             "program": "${workspaceFolder}/build_debug/bin/obclient",
             //"args": ["-f", "${workspaceFolder}/etc/observer.ini", "-P", "cli"],
             //"cwd": "${workspaceFolder}/${defaultBuildTask}/"
+        },
+        {
+            "name": "C++ Launch with sudo",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/${defaultBuildTask}/bin/observer",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "miDebuggerPath": "/usr/bin/lldb",
+            "pipeTransport": {
+                "pipeProgram": "sudo",
+                "pipeArgs": [
+                    "-S"
+                ],
+                "debuggerPath": "/usr/bin/lldb",
+                "pipeCwd": "",
+                "quoteArgs": true
+            },
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "logging": {
+                "trace": true,
+                "traceResponse": true,
+                "engineLogging": true
+            }
         }
     ]
 }
